tests/Errors/Generic/Files/ByteOrderMark/Found.php
<?php

declare(strict_types=1);

// This file begins with a UTF-8 BOM, i.e. \xEF\xBB\xBF
// Do not change or save this file using your editor!
echo "Hello, world!\n";
